@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: Kijk.nl changed their URL scheme (Fixes #642)
+Fixed: paging and clips were not shown for kijk.nl (Fixes #609)
 
 [I]Previous changes[/I]
+Fixed: Kijk.nl changed their URL scheme (Fixes #642)
 Fixed: pages in kijk.nl did not show videos (Fixes #609)
 Fixed: SBS 6, SBS 9, NET 5 and Veronica broke (Fixes #603)
 Added: SBS 9.nl channel
